# p-balm

./: .buildinfo  .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.md  README.rst  genindex.html  index.html  installation.html  objects.inv  output.out  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  usage.html
api/: index.html  inner_solvers.html  problem.html  result.html  solve.html  utils.html
docs/: conf.py  index.rst
docs/source/: conf.py
examples/: MM_QPs.py  basis_pursuit.html  basis_pursuit.py  constrained_optimization.html  index.html  run_mpc.py  sparse_regression.html
examples/paper/: MPCBase.py  all_MM_QPs.py  basis_pursuit.py  basis_pursuit_L_bound.py  bop_system.py  run_mpc.py
examples/utils/: MPCBase.py  bop_system.py  plotting.py
src/allema/: __init__.py  allema.py  skeleton.py
src/pbalm/: __init__.py  pbalm.py
src/pbalm/inner_solvers/: inner_solvers.py
src/pbalm/utils/: prox_utils.py
tests/: MPC_nonconvex_0.py  all_MM_QPs.py  basis_pursuit.py  basis_pursuit_L_bound.py  basis_pursuit_noncvx.py  conftest.py  plotting.py  test_allema.py  test_clustering_allema.py  test_cutest_allema.py  test_maratos2_allema.py  test_maratos_allema.py  test_powellbs_allema.py  test_qp_allema.py  test_rosenbrock_allema.py  test_skeleton.py
tests/old_MPC/: OC_RPO.py
