[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[project]
name = "pbalm"
version = "0.1.1"
description = "A Python library for large-scale nonlinear (convex) optimization."
authors = [
  { name = "Adeyemi Damilare Adeoye" }
]
license = { file = "../LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "jax"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
