[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[project]
name = "pbalm"
version = "0.1.1"
description = "Proximal augmented Lagrangian method for nonconvex structured optimization."
authors = [
  { name = "Adeyemi Damilare Adeoye" }
]
license = { file = "../LICENSE" }
readme = "README.rst"
keywords = ["optimization", "nonlinear optimization", "constrained optimization", "augmented Lagrangian"]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "jax",
  "jaxlib",
  "proxop"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
