[metadata]
name = pbalm
description = Augmented Lagrangian Method for Constrained Optimization
author = Adeyemi Damilare Adeoye
author_email = 58517568+adeyemiadeoye@users.noreply.github.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/adeyemiadeoye/p-balm
project_urls =
    Documentation = https://github.com/adeyemiadeoye/p-balm

platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov pbalm --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
version = 4.6
package = pbalm
