[metadata]
name = pbalm
version = 0.1.1
description = Proximal augmented Lagrangian method for nonconvex structured optimization.
author = Adeyemi Damilare Adeoye
author_email = 58517568+adeyemiadeoye@users.noreply.github.com
license = Apache Software License
license_files = ../LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/adeyemiadeoye/p-balm
project_urls =
    Documentation = https://github.com/adeyemiadeoye/p-balm

platforms = any
keywords = optimization, nonlinear optimization, constrained optimization, augmented Lagrangian
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.8
install_requires =
    numpy
    jax
    jaxlib
    proxop

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov pbalm --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
version = 4.6
package = pbalm
